--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&family=Red+Hat+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet" />
-    <link rel="stylesheet" href="dist/css/plvylist.css">
+    <link rel="stylesheet" href="src/css/plvylist.css">
     <style>
       :root {
         --step--2: clamp(0.9113rem, 0.8922rem + 0.0951vw, 0.96rem);
