made it better for github

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&family=Red+Hat+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet" />
-    <link rel="stylesheet" href="src/css/plvylist.css">
+    <link rel="stylesheet" href="../src/css/plvylist.css">
+    <script src="plvylist.js" async></script>
     <style>
       :root {
         --step--2: clamp(0.9113rem, 0.8922rem + 0.0951vw, 0.96rem);
@@ -41,7 +42,6 @@
         text-align: center;
       }
     </style>
-    <script src="src/js/plvylist.js" async></script>
   </head>
 
   <body>
