okay, it should be usable now

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         </p>
       </header>
       <plvylist-player
-        audio-location="demo/audio/"
-        album-name="Alone"
-        artist-name="Action Hamilton"
-        placeholder-image="demo/img/missingart.png"
-        cover-art="demo/img/aiacr.jpg"
+        audio-location="./demo/audio/"
+        album-name="Alone In A Crowded Room"
+        artist-name="troy."
+        placeholder-image="./demo/img/missingart.png"
+        cover-art="./demo/img/aiacr.jpg"
         starting-volume="0.5"
         starting-time="0"
       >
