--- a/index.html
+++ b/index.html
@@ -14,56 +14,28 @@
     />
     <style>
         html {
-            background-color: #010101;
-            color: #f5f5f5;
-            font-family: Monospace, monospace;
-        }
-
-        body {
-            font-size: clamp(1.0938rem, 1.0523rem + 0.2073vw, 1.2rem);
-        }
-
-        h1 {
-            font-size: clamp(2.2681rem, 2.0098rem + 1.2915vw, 2.93rem);
+            color-scheme: light dark;
+            font-family: system-ui, sans-serif;
         }
 
         header {
             text-align: center;
         }
-
-        header a {
-            font-style: italic;
-            color: currentColor;
-        }
-
-        @media (prefers-color-scheme: light) {
-            html {
-                background-color: #f5f5f5;
-                color: #010101;
-            }
-        }
     </style>
-    <script src="demo/plvylist-component.js" defer></script>
+    <script src="/src/plvylist-component.js" defer></script>
 </head>
 
 <body>
 <main>
     <header>
         <h1>Plvylist Demo Page</h1>
-        <p>
-            Take a look at how Plvylist works. You'll be listening to an album I
-            wrote,
-            <a href="https://justtroy.bandcamp.com" target="_blank" rel="noopener"
-            >Alone in a Crowded Room</a
-            >.
+        <p>You'll be listening to an album I wrote, <a href="https://justtroy.bandcamp.com">Alone in a Crowded Room</a>.
         </p>
+        <p>If you want to customize the width, put it in a container.</p>
     </header>
     <plvylist-player
-            audio-location="demo/audio/"
-            album-name="Alone In A Crowded Room"
-            artist-name="troy."
-            placeholder-image="demo/img/missingart.png"
-            cover-art="demo/img/aiacr.jpg"
+            tracks="/src/tracks.json"
+            placeholder="/src/img/missingart.png"
             starting-volume="0.5"
             starting-time="0"
     >
