--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             text-align: center;
         }
     </style>
-    <script src="/src/plvylist-component.js" defer></script>
+    <script src="src/plvylist-component.js" defer></script>
 </head>
 
 <body>
@@ -34,8 +34,8 @@
         <p>If you want to customize the width, put it in a container.</p>
     </header>
     <plvylist-player
-            tracks="/src/tracks.json"
-            placeholder="/src/img/missingart.png"
+            tracks="src/tracks.json"
+            placeholder="src/img/missingart.png"
             starting-volume="0.5"
             starting-time="0"
     >
