--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             text-align: center;
         }
     </style>
-    <script src="src/plvylist-component.js" defer></script>
+    <script src="src/plvylist-component.min.js" defer></script>
 </head>
 
 <body>
