--- a/index.html
+++ b/index.html
@@ -4,19 +4,33 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Plyvlist | Web Audio Component</title>
+
     <script type="module">
         import "./plvylist-component.js"
     </script>
+
     <style>
-        html {color-scheme: light dark; font-family: system-ui, sans-serif;}
-        header {text-align: center;}
+        html {
+            color-scheme: light dark;
+            font-family: system-ui, sans-serif;
+        }
+
+        body {
+            inline-size: 90%;
+            margin-inline: auto;
+            max-inline-size: 800px;
+        }
+
+        header {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
 <main>
     <header>
         <h1>Plvylist Demo Page</h1>
-        <p>You'll be listening to an album I wrote, <a href="https://justtroy.bandcamp.com">Alone in a Crowded Room</a>. If you want to customize the width, put it in a container.</p>
+        <p>You'll be listening to an album I wrote, <a href="https://justtroy.bandcamp.com">Alone in a Crowded Room</a>.</p>
     </header>
     <plvylist-player tracks="./tracks.json" starting-volume="0.7"></plvylist-player>
 </main>
