--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Plyvlist | Web Audio Component</title>
 
         <script type="module">
-            import "./plvylist-component.js";
+            import "./plvylist-player.js";
         </script>
 
         <style>
