--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="https://justtroy.bandcamp.com">Alone in a Crowded Room</a>.
         </p>
       </header>
-      <plvylist-player tracks="/tracks.json" volume="0.7"></plvylist-player>
+      <plvylist-player file="/tracks.json" volume="0.7"></plvylist-player>
     </main>
   </body>
 </html>
