Document all current functionality, fix defects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Plyvlist | Web Audio Component</title>
-    <script type="module" src="/src/plvylist-player.js"></script>
+    <script type="module" src="/src/plvylist.js"></script>
     <style>
       html {
         color-scheme: light dark;
@@ -31,7 +31,7 @@
           <a href="https://justtroy.bandcamp.com">Alone in a Crowded Room</a>.
         </p>
       </header>
-      <plvylist-player file="/tracks.json" volume="0.7"></plvylist-player>
+      <plvy-list file="/tracks.json" volume="0.7"></plvy-list>
     </main>
   </body>
 </html>
