--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Plyvlist | Web Audio Component</title>
+    <script type="module" src="/node_modules/api-viewer-element/lib/api-viewer.js"></script>
     <script type="module" src="/src/plvylist.js"></script>
     <style>
       html {
@@ -17,20 +18,30 @@
       }
 
       header {
-        text-align: center;
+        border-block-end: 1px solid;
+        font-size: 2rem;
+        margin-block: 2rem;
+      }
+
+      api-viewer {
+        max-inline-size: 100%;
       }
     </style>
   </head>
   <body>
     <main>
-      <header>
-        <h1>Plvylist Demo Page</h1>
-        <p>
-          You'll be listening to an album I wrote,
-          <a href="https://justtroy.bandcamp.com">Alone in a Crowded Room</a>.
-        </p>
-      </header>
-      <plvy-list file="/tracks.json" volume="0.7"></plvy-list>
+      <section class="demo">
+        <header>
+          <h1>Plvylist Demo</h1>
+        </header>
+        <plvy-list file="/tracks.json" volume="0.7"></plvy-list>
+      </section>
+      <section class="docs">
+        <header>
+          <h2>Documentation</h2>
+        </header>
+        <api-viewer src="/custom-elements.json"></api-viewer>
+      </section>
     </main>
   </body>
 </html>
