Fix docs, add MediaSession abilities

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
         <p>
           <strong
             >Each key aside from <code>file</code> is optional and will default to placeholders if
-            they aren&#39;t provided.</strong
+            they aren't provided.</strong
           >
         </p>
         <p>View <a href="#demo">the demo</a> or <a href="#docs">the documentation</a>.</p>
       </section>
       <section class="demo" id="demo">
         <h2>Demo</h2>
-        <plvy-list file="/tracks.json" volume="0.7"></plvy-list>
+        <plvy-list file="/tracks.json" starting-volume="0.7"></plvy-list>
       </section>
       <section class="docs" id="docs">
         <header>
