Restore all functionality, now with Lit!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Plyvlist | Web Audio Component</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" /> -->
     <!-- <script type="module" src="/node_modules/api-viewer-element/lib/api-viewer.js"></script> -->
     <script type="module" src="/src/plvy-list.js"></script>
     <style>
