--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
@@ -10,7 +10,7 @@
     <script type="module">
       import tracks from "/tracks.js?url";
 
-      window.plvylist.data = tracks;
+      document.getElementById("plvylist").data = tracks;
     </script>
   </head>
   <body class="container">
