--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/src/plvylist.js"></script>
     <script type="module" src="https://jspm.dev/@api-viewer/docs"></script>
     <script type="module">
-      import tracks from "/tracks.js?url";
+      import tracks from "/src/tracks.js";
 
       document.getElementById("plvylist").data = tracks;
     </script>
